Bug 373459 - AddToArchive ignores compression options
Summary: AddToArchive ignores compression options
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.0
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-09 11:26 UTC by Elvis Angelaccio
Modified: 2017-01-01 16:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2016-12-09 11:26:10 UTC
"ark --add --changetofirstpath --dialog ~/foo/*" ignores all the new compression options (e.g. multivolumes). AddToArchive needs to forward them from CreateDialog to CreateJob.
Comment 1 Elvis Angelaccio 2017-01-01 16:30:30 UTC
Git commit ec9f3f34e63a2f49dbf2f524ce2f11f699afc21a by Elvis Angelaccio.
Committed on 01/01/2017 at 16:28.
Pushed by elvisangelaccio into branch 'Applications/16.12'.

Use compression options in AddToArchive
FIXED-IN: 16.12.1

Differential Revision: D3791

M  +6    -4    kerfuffle/addtoarchive.cpp
M  +1    -0    kerfuffle/addtoarchive.h

https://commits.kde.org/ark/ec9f3f34e63a2f49dbf2f524ce2f11f699afc21a