Use compression options in AddToArchive

BUG: 373459
FIXED-IN: 16.12.1

Differential Revision: D3791